css/styles.css
*
{
    box-sizing: border-box;
}
body
{
    background-color: #ffffff;
    color: #434455;
    font-family: "Roboto", sans-serif;
    font-size: 16px;
}
img
{
    display: block;
}
a
{
    text-decoration: none;
    color: #2e2f42;
}
ol, ul
{
    padding: 0;
    margin: 0;
}
h1, h2, h3, h4, h5, h6, p
{
    margin: 0;
    padding: 0;
}
.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;

    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
}
.contacts
{
    font-style: normal;
}
.contacts .contact
{
    color: #434455;
    line-height: 1.5;
    letter-spacing: 0.02em;
}
.contacts .contact:hover, .contacts .contact:focus
{
    color: #404bbf;
}
.order-button
{
    cursor: pointer;
    letter-spacing: 0.04em;
    background: #4d5ae5;
    font-weight: 500;
    color: #ffffff;
    line-height: 1.5;
    border: none;
    padding: 16px 32px;
    min-width: 169px;
    height: 56px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    border-radius: 4px;
    text-wrap: nowrap;
}
.order-button:hover, .order-button:focus
{
    background-color: #404bbf;
}
ul, ol
{
    list-style-type: none;
}

.site-logo
{
    font-family: "Raleway", sans-serif;
    font-weight: 700;
    font-size: 18px;
    line-height: 1.17;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    color: #4d5ae5;
    margin-right: 76px;
    display: inline-block;
}

.studio-dark
{
    color: #2e2f42;
}

.studio-light
{
    color: #f4f4fd;
}

.nav-link
{
    font-weight: 500;
    line-height: 1.5;
    font-size: 16px;
    letter-spacing: 0.02em;
    padding-top: 24px;
    padding-bottom: 24px;
}

.nav-link:hover, .nav-link:focus
{
    color: #404bbf;
}

.hero, .page-footer
{
    background-color: #2e2f42;
}

.page-footer
{
    padding-top: 100px;
    padding-bottom: 100px;
}

.team
{
    background-color: #f4f4fd;
}

.section-header
{
    font-size: 36px;
    line-height: 1.11;
    text-align: center;
    letter-spacing: 0.02em;
    text-transform: capitalize;
    color: #2e2f42;
    margin-bottom: 72px;
}

.hero-header
{
    color: #ffffff;
    font-size: 56px;
    line-height: 1.07;
    text-align: center;
    letter-spacing: 0.02em;
    max-width: 496px;
    margin-bottom: 48px;
    margin-left: auto;
    margin-right: auto;
}

.member-header, .port-header, .goal-header
{
    font-weight: 500;
    font-size: 20px;
    line-height: 1.2;
    letter-spacing: 0.02em;
    color: #2e2f42;
    margin-bottom: 8px;
}

.member-header
{
    text-align: center;
}

.member-info, .port-info
{
    padding-top: 32px;
    padding-bottom: 32px;
}

.port-info
{
    padding-left: 16px;
    padding-right: 16px;
    border: 1px solid #e7e9fc;
    border-top: none;
}

.member-description, .port-description, .goal-description
{
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
}

.member-list-item
{
    background-color: #ffffff;
    border-radius: 0px 0px 4px 4px;
    overflow: hidden;
}

.footer-text
{
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #f4f4fd;
    width: 264px;
}

.container
{
    width: 1158px;
    margin-left: auto;
    margin-right: auto;
    padding-right: 15px;
    padding-left: 15px;
}

.goals, .team, .portfolio
{
    padding-top: 120px;
    padding-bottom: 120px;
}

.header-container, .main-menu, .nav-links, .contacts-list
{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.hero
{
    padding-top: 188px;
    padding-bottom: 188px;
}

.nav-links, .contacts-list
{
    gap: 40px;
}

.nav-links
{
    padding-top: 24px;
    padding-bottom: 24px;
}

.goals-list, .member-list
{
    display: flex;
    flex-direction: row;
    gap: 24px;
}

.goal-item
{
    width: calc((100% - 72px) / 4);
}

.member-list
{
    text-align: center;
}

.port-list
{
    display: flex;
    flex-direction: row;
    flex-basis: 1128px;
    flex-wrap: wrap;
    column-gap: 24px;
    row-gap: 48px;
}

.port-item
{
    width: calc((100% - 24px * 2) / 3);
    border: 1px solid #e7e9fc;
}

.bottom-site-logo
{
    margin-bottom: 16px;
    display: inline-block;
    margin-right: 0;
}

.site-header
{
    border-bottom: 1px solid #e7e9fc;
}

